[package]
name = "hiero_pack"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"
description = "a simple parser and packing tool for libgdx's Hiero"
readme="README.md"
repository="https://github.com/K-C-DaCosta/hiero_pack"
keywords =["text","graphics","packer"]
categories =["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ['console']
console = ['clap']

[dependencies]
png = "0.16.7"
serde = {version = "1.0.63" , features =["derive"]}
bincode = "1.3.1"
#**** optional deps **** 
clap = {version = "2.33.3", optional = true}